# random-logger

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker-push.yml
src/: main.rs
