[package]
name = "random-logger"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.19"
signal-hook = { version = "0.3.13", default-features = false }

[profile.release]
strip = true
